--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <h1>Welcome to Javascript playground</h1>
-    <h2>Design & Code</h2>
+    <h2>Profiles</h2>
     <p>
       Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis sequi
       non aliquam. Sit, neque voluptas.
